# mcp-server-elasticsearch

./: Cargo.toml  Dockerfile
.github/workflows/: auto-comment.yml  publish-ghcr.yml
src/servers/elasticsearch/: base_tools.rs
tests/: http_tests.rs
