[package]
name = "elasticsearch-core-mcp-server"
version = "0.4.6"
edition = "2024"
authors = ["Elastic.co"]
license-file = "LICENSE"
description = "MCP server for core Elastisearch features"
homepage = "https://github.com/elastic/mcp-server-elasticsearch"
repository = "https://github.com/elastic/mcp-server-elasticsearch"

default-run = "elasticsearch-core-mcp-server"

[dependencies]
# Base stuff
anyhow = "1.0"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.12"
thiserror = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# CLI, config
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
serde-aux = "4"
serde_json5 = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
]}

elasticsearch = { version = "9.0.0-alpha.1", git = "https://github.com/elastic/elasticsearch-rs", branch = "new-with-creds" }

# Async and http
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal", "process", "sync"] }
tokio-util = "0.7"
axum = "0.8"
http = "1.3.1"

# Schemars: keep in sync with rmcp
schemars = { version = "0.8", features = ["chrono"] }

reqwest = "0.12"
futures-util = "0.3"

# MCP rust sdk: main branch, 2025-06-26
[dependencies.rmcp]
features = [
    "server", "auth",
    "transport-sse-server", "transport-streamable-http-server",
    "transport-io", # stdio
    "client", "transport-sse-client", "transport-streamable-http-client", "transport-child-process",
]
# Keep rev in sync with rmcp-macros below
version = "0.2.1"

[dependencies.rmcp-macros]
version = "0.2.1"

[dev-dependencies]
sse-stream = "0.2"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
# Note: do not add `panic = "abort"` since tower-http has a panic-handling middleware
